k8s/mongo.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-search-service
  namespace: backend
spec:
  selector:
    app: mongodb-search
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-search
  namespace: backend
spec:
  serviceName: mongodb-search-service
  selector:
    matchLabels:
      app: mongodb-search
  template:
    metadata:
      labels:
        app: mongodb-search
    spec:
      containers:
        - name: mongodb-search
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-search-storage
              mountPath: /data/db
      volumes:
        - name: mongo-search-storage
          persistentVolumeClaim:
            claimName: mongo-search-pvc
