k8s/search-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: devopszms2024/search-milan:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: backend
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
